# py2sess

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/solar_jacobian_profile1/: README.md  fortran_jacobian_reference.npz  rt_inputs.npz  scene.yaml
benchmarks/thermal_jacobian_profile1/: README.md  gas_xsec.nc  (+3 more)
docs/: api_arguments.md  benchmark_cases.md  full_spectrum_benchmarks.md  model_assumptions.md  pypi_release.md  retrieval.md  retrieval_examples.md
examples/: _full_spectrum_benchmark_common.py  benchmark_scene_full_spectrum.py  benchmark_tir_full_spectrum.py  benchmark_uv_full_spectrum.py  build_thermal_source_from_temperature.py  compare_fortran_jacobian.py  retrieve_synthetic_spectra.py  run_analytic_cases.py  run_tir_reference_case.py  run_uv_reference_case.py
scripts/: create_fortran_createprops_provider.py  create_fortran_jacobian_fixture.py  create_hitran_opacity_table.py  create_runtime_minimal_benchmark_bundle.py  enrich_full_benchmark_optics.py  plot_cuda_colab_t4_scaling.py  run_full_benchmark_threads.sh
tests/: __init__.py  analytic_oracles.py  test_analytic_cases.py  test_api.py  test_benchmark_examples.py  test_enrich_full_benchmark_optics.py  test_fortran_jacobian_validation.py  test_geocape_inputs.py  test_gradient_checks.py  test_helper_parity.py  test_hitran_inputs.py  test_opacity_table.py  test_optical_phase.py  test_optical_properties.py  test_optical_scene.py  test_reference_cases.py  test_retrieval.py  test_retrieval_examples.py  test_scene_io.py  test_thermal_source.py
(+91 files in other folders)
